--- a/primeiro.html
+++ b/primeiro.html
@@ -90,7 +90,13 @@
         font-size: x-large;
     }
     
+    .links{
+        text-align: center;
+        margin-left: 900px;
+    }
  
+
+
     }
        
     .nomes {
